# telegodex

./: .env.example  .gitignore  ANTHROPIC_COMPATIBILITY.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  CUSTOM_PROVIDERS.md  FEATURES.md  HARNESS.md  LICENSE  MODELS.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RULES.md  SECURITY.md  USAGE.md  config.py  configure_provider.py  custom_providers.example.json  custom_providers.schema.json  main.py  markdown_changes.diff  provider.toml.example  pyproject.toml  requirements.txt  run.py  tests_smoke_blockquote.py  tests_smoke_latex.py  tests_smoke_logging.py  tests_smoke_polling.py  tests_smoke_retry.py  需求.md
.claude/tasks/: task-001-example-streaming.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
ai/: __init__.py  anthropic_provider.py  base.py  china_providers.py  deepseek_provider.py  google_provider.py  openai_compatible_provider.py  openai_provider.py  router.py  token_usage.py
bot/: __init__.py  keyboards.py  startup.py  telegram_draft.py  transport_adapter.py
bot/codex/: __init__.py  approval_ui.py  command_flow.py  command_ui.py  formatting.py  model_ui.py  reply_ui.py  screenshot_ui.py  session_ui.py  shell_ui.py  stop_ui.py  topic_filter.py  topic_messages.py  topic_recovery.py  topic_state.py  turn.py  (+3 more)
config/: __init__.py  provider_hot_reload.py  provider_loader.py
docs/: ANTHROPIC_COMPATIBILITY.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_REPORT.md  CUSTOM_PROVIDERS.md  DeepSeek-V4-Encoding.md  FEATURES.md  HARNESS_IMPLEMENTATION.md  MODELS.md  PRODUCT_EXPERIENCE.md  PROJECT_SUMMARY.md  QUICKSTART.md  RICH_MESSAGES.md  STARTUP.md  USAGE.md  VERSION-CONTROL.md  需求.md
extensions/: README.md
i18n/: __init__.py  loader.py  locale.py  manager.py  scanner.py  translator.py
prompts/: __init__.py  _utils.py  manager.py  system_prompt.md
security/: __init__.py  auth.py  rate_limiter.py
storage/: __init__.py  context_manager.py  models.py
tests/: __init__.py  conftest.py  fake_telegram_client.py
utils/: __init__.py  screenshot.py
(+163 files in other folders)
