[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegodex"
version = "0.1.4"
description = "Telegram Workbench with multi-provider AI and Codex bridge"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "docs/CodexSourceCode",
    "docs/TelegramDocuments",
    "docs/SourceCodes",
    "docs/DownloadDocs.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise ... from err (optional)
    "N818",  # exception names should end with Error
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
show_column_numbers = true
explicit_package_bases = true
exclude = [
    "docs/CodexSourceCode",
    "docs/TelegramDocuments",
    "docs/SourceCodes",
    "docs/DownloadDocs.py",
    "tests",
]

[[tool.mypy.overrides]]
module = [
    "aiogram.*",
    "aiohttp.*",
    "aiofiles.*",
    "openai.*",
    "anthropic.*",
    "google.generativeai.*",
    "sqlalchemy.*",
    "alembic.*",
    "aiosqlite.*",
    "redis.*",
    "aioredis.*",
    "dotenv.*",
    "pydantic.*",
    "pydantic_settings.*",
    "dateutil.*",
    "pytz.*",
    "loguru.*",
]
ignore_missing_imports = true
